# writeflow_studio

./: .eslintrc.cjs  .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  index.html  package.json  tailwind.config.js  vite.config.ts
.claude/: settings.local.json
data/: writeflow.db
docs/: PRD.md  README.md  desktop-logo-design-guide.md  development-roadmap.md  technical-architecture.md  ui-design-specification.md  writeflow-studio-prototype.html
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/data/: writeflow.db
src-tauri/icons/: README.md  WriteFlowStudio.icns  generate-icons.sh  icon.icns
src-tauri/src/: main.rs  utils.rs
src-tauri/src/commands/: agent.rs  config.rs  document.rs  environment.rs  mod.rs  project.rs  provider.rs  system.rs  workspace.rs
src-tauri/src/models/: agent.rs  config.rs  document.rs  environment.rs  project.rs  provider.rs  system.rs  workspace.rs
src-tauri/src/services/: backup.rs  config.rs  database.rs  environment.rs  export.rs  mod.rs  writeflow.rs
src/components/document/: DocumentTree.tsx  ImportExportDialog.tsx
src/components/editor/: MarkdownEditor.tsx  MarkdownPreview.tsx
src/lib/: invokeCompat.ts  router.tsx  tauri.ts  utils.ts
src/pages/: AIProviders.tsx  Agents.tsx  Dashboard.tsx  DashboardPage.tsx  DocumentEditor.tsx  DocumentsPage.tsx  Environment.tsx  MCPServers.tsx  ProjectView.tsx  ProjectsPage.tsx  Settings.tsx  SettingsPage.tsx  WorkspacePage.tsx  WritingPreferences.tsx
src/store/: app.ts
src/types/: document.ts
(+24 files in other folders)
